--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,11 +8,15 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.13"
-openai = "^1.93.3"
-pandas = "^2.3.1"
+openai = "1.74.0"
+pandas = "2.3.0"
 scikit-learn = "^1.7.0"
 jupyter = "^1.1.1"
 matplotlib = "^3.10.3"
+json-repair = "0.47.1"
+numexpr = "2.11.0"
+pydantic = "2.11.7"
+python-dotenv = "1.1.0"
 
 
 [build-system]
