--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ json-repair = "0.47.1"
 numexpr = "2.11.0"
 pydantic = "2.11.7"
 python-dotenv = "1.1.0"
+tavily-python = "^0.7.12"
 
 
 [build-system]
