--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,9 @@ numexpr = "2.11.0"
 pydantic = "2.11.7"
 python-dotenv = "1.1.0"
 tavily-python = "^0.7.12"
+sqlalchemy = "^2.0.44"
+chromadb = "^1.1.1"
+pdfplumber = "^0.11.7"
 
 
 [build-system]
