--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ tavily-python = "^0.7.12"
 sqlalchemy = "^2.0.44"
 chromadb = "^1.1.1"
 pdfplumber = "^0.11.7"
+tiktoken = "^0.12.0"
 
 
 [build-system]
