--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ sqlalchemy = "^2.0.44"
 chromadb = "^1.1.1"
 pdfplumber = "^0.11.7"
 tiktoken = "^0.12.0"
+networkx = "^3.5"
+smolagents = "^1.22.0"
 
 
 [build-system]
